fix photo contrast

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -165,7 +165,7 @@ nav.fix .btn {
 }
 
 .share.btn {
-  background: white !important;
+  background-color: white !important;
   color: #888 !important;
   padding-left: 40px;
 }
@@ -872,6 +872,14 @@ ul.none {
 
 .play:hover, .sound:hover {
   transform: scale(1.05);
+}
+
+.left {
+  left: 0;
+}
+
+.right {
+  right: 0;
 }
 
 /*
